Update lobby struct and swagger definition
