# docs/swagger.json
@@ -46,6 +46,63 @@
                 }
             }
         },
+        "/lobby/{lobbyId}/endgame": {
+            "patch": {
+                "description": "Update lobby",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lobby"
+                ],
+                "summary": "Update lobby",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/lobby/{lobbyId}/submission": {
+            "patch": {
+                "description": "Update lobby",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lobby"
+                ],
+                "summary": "Update lobby",
+                "parameters": [
+                    {
+                        "description": "Update Lobby Request",
+                        "name": "lobby",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.UpdateLobbyRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/v1": {
             "get": {
                 "description": "Root endpoint",
@@ -255,13 +312,6 @@
             }
         },
         "/v1/lobby": {
-            "get": {
-                "tags": [
-                    "lobby"
-                ],
-                "summary": "Create a new lobby",
-                "responses": {}
-            },
             "post": {
                 "description": "Create a new lobby and add it to the database",
                 "consumes": [
@@ -286,48 +336,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/types.Lobby"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/api.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/lobby/{id}": {
-            "put": {
-                "description": "Update lobby",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "lobby"
-                ],
-                "summary": "Update lobby",
-                "parameters": [
-                    {
-                        "description": "Update Lobby Request",
-                        "name": "lobby",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.UpdateLobbyRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/types.Lobby"
-                        }
+                    "204": {
+                        "description": "No Content"
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -634,12 +644,7 @@
             }
         },
         "types.CreateLobbyRequest": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                }
-            }
+            "type": "object"
         },
         "types.CreateUserRequest": {
             "type": "object",
@@ -649,14 +654,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "types.Lobby": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
                 }
             }
         },
@@ -718,7 +715,19 @@
         "types.UpdateLobbyRequest": {
             "type": "object",
             "properties": {
-                "id": {
+                "code": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "tests_passed": {
+                    "type": "integer"
+                },
+                "user_id": {
                     "type": "integer"
                 }
             }
