# types/lobby.go
@@ -1,13 +1,27 @@
 package types
 
+import "time"
+
 type CreateLobbyRequest struct {
-	ID            int    `json:"id"`
+	LobbyId     string `json:"lobby_id"`
+	OwnerId     int    `json:"owner_id"`
+	UsersId     []int  `json:"users_id"`
+	ChallengeId int    `json:"challenge_id"`
+	Settings    struct {
+		MaxPlayers       int           `json:"max_players"`
+		GameDuration     time.Duration `json:"game_duration"`
+		AllowedLanguages []string      `json:"allowed_languages"`
+	} `json:"settings"`
 }
 
 type UpdateLobbyRequest struct {
-	ID            int    `json:"id"`
+	UserId      int       `json:"user_id"`
+	Code        string    `json:"code"`
+	Language    string    `json:"language"`
+	TestsPassed int       `json:"tests_passed"`
+	Date        time.Time `json:"date"`
 }
 
 type Lobby struct {
-	ID            int    `json:"id"`
+	Id int `json:"id"`
 }
